final data + data split

--- a/Project Code._Full_EDA.ipynb
+++ b/Project Code._Full_EDA.ipynb
@@ -261,6 +261,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "9b06dd30",
    "metadata": {},
@@ -549,6 +550,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "175f9872",
    "metadata": {},
@@ -615,6 +617,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "14f318cb",
    "metadata": {},
@@ -761,6 +764,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "9d621f90",
    "metadata": {},
@@ -924,6 +928,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "5f40a66e",
    "metadata": {},
@@ -975,6 +980,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "49848d6a",
    "metadata": {},
@@ -1023,6 +1029,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "5a73944b",
    "metadata": {},
@@ -1056,6 +1063,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "d9f920e6",
    "metadata": {},
@@ -1128,6 +1136,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "37bada79",
    "metadata": {},
@@ -1136,6 +1145,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "72550719",
    "metadata": {},
@@ -1331,6 +1341,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "4d0fb842",
    "metadata": {},
@@ -1339,6 +1350,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "5918d795",
    "metadata": {},
@@ -1385,6 +1397,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "82795bce",
    "metadata": {},
@@ -1423,6 +1436,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "cd3d636d",
    "metadata": {},
@@ -1446,6 +1460,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "2f7500da",
    "metadata": {},
@@ -1527,6 +1542,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "407ad4d2",
    "metadata": {},
@@ -1548,6 +1564,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "1e266c40",
    "metadata": {},
@@ -1635,6 +1652,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "8b2f4d3c",
    "metadata": {},
@@ -1713,6 +1731,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "130f7085",
    "metadata": {},
@@ -1731,6 +1750,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "12a5d5f3",
    "metadata": {},
@@ -1776,6 +1796,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "30c8dba0",
    "metadata": {},
@@ -1794,6 +1815,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "ca6339e7",
    "metadata": {},
@@ -1839,6 +1861,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "0b9716a0",
    "metadata": {},
@@ -1873,6 +1896,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "6b7a6e58",
    "metadata": {},
@@ -1926,6 +1950,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "ced553e3",
    "metadata": {},
@@ -1945,6 +1970,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "cddb1876",
    "metadata": {},
@@ -1990,6 +2016,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "5be8fe56",
    "metadata": {},
@@ -2123,6 +2150,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "56dd2671",
    "metadata": {},
@@ -2157,6 +2185,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "72081075",
    "metadata": {},
@@ -2175,6 +2204,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "59b113ea",
    "metadata": {},
@@ -2235,6 +2265,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "b7accf7f",
    "metadata": {},
@@ -2243,6 +2274,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "955ae69e",
    "metadata": {},
@@ -2277,6 +2309,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "4ed20ab5",
    "metadata": {},
@@ -2403,6 +2436,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "2441f325",
    "metadata": {},
@@ -2437,6 +2471,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "d21e9c5b",
    "metadata": {},
@@ -2455,6 +2490,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "bcbce3b5",
    "metadata": {},
@@ -2489,6 +2525,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "957578a9",
    "metadata": {},
@@ -2507,6 +2544,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "1957b6de",
    "metadata": {},
@@ -2515,6 +2553,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "714fbb09",
    "metadata": {},
@@ -2585,6 +2624,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "268e7e61",
    "metadata": {},
@@ -2593,6 +2633,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "7eaf724c",
    "metadata": {},
@@ -2629,6 +2670,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "184e5086",
    "metadata": {},
@@ -2681,6 +2723,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "e367bec7",
    "metadata": {},
@@ -2699,6 +2742,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "3e4ae258",
    "metadata": {},
@@ -2733,6 +2777,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "aaf859d1",
    "metadata": {},
@@ -2751,6 +2796,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "af982a10",
    "metadata": {},
@@ -2785,6 +2831,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "ac409f0f",
    "metadata": {},
@@ -2925,6 +2972,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "75513d12",
    "metadata": {},
@@ -3132,6 +3180,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "2ed6f364",
    "metadata": {},
@@ -3139,6 +3188,20 @@
     "We have 20 predictors which have a reasonable correlation with price which we will be the only predictors we use in our model building. \n",
     "\n",
     "When we develop our models, we will print the feature importances and note which features are deemed significant by each model. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c4ee986d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# original data had -- for this observation so we can just drop it.\n",
+    "final_dat.isna().sum()\n",
+    "final_dat.iloc[29]\n",
+    "final_dat.drop(29, inplace = True)\n",
+    "y.drop(29, inplace = True)"
    ]
   },
   {
@@ -3161,6 +3224,13 @@
     "\n",
     "### and use the same data split as above"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "1c783976",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
