final EDA & prep

--- a/Project Code._Full_EDA.ipynb
+++ b/Project Code._Full_EDA.ipynb
@@ -3274,6 +3274,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 197,
+   "id": "39740e2e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       20950.0\n",
+       "1       34755.0\n",
+       "2       10999.0\n",
+       "3       34888.0\n",
+       "4       71269.0\n",
+       "         ...   \n",
+       "5995    27997.0\n",
+       "5996    17997.0\n",
+       "5997    16900.0\n",
+       "5998    41995.0\n",
+       "5999    17999.0\n",
+       "Name: price, Length: 5999, dtype: float64"
+      ]
+     },
+     "execution_count": 197,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 83,
    "id": "d47291f8",
    "metadata": {},
