data saved and my initial code

--- a/Final Project Code - Used Cars .ipynb
+++ b/Final Project Code - Used Cars .ipynb
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "36a5e438",
+   "id": "7e1aeaa3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "05b85a68",
+   "id": "2e72b220",
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "626d0bd0",
+   "id": "01d36463",
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "afa4846d",
+   "id": "77e8416c",
    "metadata": {},
    "source": [
     "### brief summary of all the things we did "
@@ -320,7 +320,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "4d001e17",
+   "id": "9137d2b2",
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "81cf78ce",
+   "id": "17e15b06",
    "metadata": {},
    "outputs": [
     {
@@ -510,7 +510,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "ae0f6b5e",
+   "id": "c71574b5",
    "metadata": {},
    "outputs": [
     {
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1f30635",
+   "id": "89f2cd9e",
    "metadata": {},
    "source": [
     "### Exploring Trends in Categorical Predictors"
@@ -536,7 +536,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "fb52d7eb",
+   "id": "ead9fbf4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -563,7 +563,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "0023b74e",
+   "id": "15d9d33d",
    "metadata": {},
    "outputs": [
     {
@@ -668,7 +668,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "02b90f3f",
+   "id": "1b31af81",
    "metadata": {},
    "source": [
     "From this information, we can simply visualize with boxplot any variables until make_name, to see their relevance and adjust them. After that we will look more thoroughly, maybe group data. Consider dropping anything with other 1000 unique values as we only have 6000 rows, so might not be good predictors, but will decide on case by case basis."
@@ -677,7 +677,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "79efc0a5",
+   "id": "249d7c65",
    "metadata": {},
    "outputs": [
     {
@@ -714,7 +714,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "523d9f9f",
+   "id": "ed4090ad",
    "metadata": {},
    "source": [
     "body_type seems to have a significant trend right away. We cancheck value counts to see if some types are more common than others"
@@ -723,7 +723,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "558f12bd",
+   "id": "8d913dc8",
    "metadata": {},
    "outputs": [
     {
@@ -752,7 +752,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12498999",
+   "id": "75bfd574",
    "metadata": {},
    "source": [
     "Have enough observations for each value to be valid, none of the smaller groups stand out substantially, convertible is a little bit spread but that should be fine -> convert to dummies"
@@ -761,7 +761,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "03808078",
+   "id": "f88c9cca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -776,7 +776,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "f7823828",
+   "id": "fa378954",
    "metadata": {},
    "outputs": [
     {
@@ -814,7 +814,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "62926a81",
+   "id": "1933381d",
    "metadata": {},
    "outputs": [
     {
@@ -854,7 +854,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a34c7620",
+   "id": "a7a65987",
    "metadata": {},
    "source": [
     "Turn anything under 100 observations into 'other', if there is only one observation this is not useful data."
@@ -863,7 +863,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "b5d4c994",
+   "id": "2d3399e6",
    "metadata": {},
    "outputs": [
     {
@@ -896,7 +896,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "6ccadf99",
+   "id": "086d639f",
    "metadata": {},
    "outputs": [
     {
@@ -932,7 +932,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d7a35fe",
+   "id": "5b0bd89c",
    "metadata": {},
    "source": [
     "Other is naturally with bigger range, but this looks better, get dummies for it:"
@@ -941,7 +941,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "287df865",
+   "id": "10fbeefd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -951,7 +951,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "a4d853ed",
+   "id": "7c7918bf",
    "metadata": {},
    "outputs": [
     {
@@ -987,7 +987,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e059d94",
+   "id": "97427cff",
    "metadata": {},
    "source": [
     "Mean and range seem both to be varying, might be valuable column to predict price, check value counts:"
@@ -996,7 +996,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "396057f7",
+   "id": "ca2ffc3c",
    "metadata": {},
    "outputs": [
     {
@@ -1022,7 +1022,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "3607b398",
+   "id": "9f70c4e4",
    "metadata": {},
    "outputs": [
     {
@@ -1066,7 +1066,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f97d348",
+   "id": "7dc81401",
    "metadata": {},
    "source": [
     "Looks relevant, change in mean and besides 2 relatively small range -> convert into dummies"
@@ -1075,7 +1075,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "75b043c2",
+   "id": "0e7f05c4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1086,7 +1086,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "364da1b2",
+   "id": "95aee4de",
    "metadata": {},
    "outputs": [
     {
@@ -1122,7 +1122,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c43e1c2e",
+   "id": "fa9ae881",
    "metadata": {},
    "source": [
     "This seems to be too many columns to just turn into dummies, and as brand is strongly connected to price this seems an important column to keep -> divide brands into groups depending on their mean price, and label encode these groups."
@@ -1131,7 +1131,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "6213caf9",
+   "id": "0807ae87",
    "metadata": {},
    "outputs": [
     {
@@ -1213,7 +1213,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "03f0599f",
+   "id": "37f3cb0e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1256,7 +1256,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "611c0a8a",
+   "id": "14819711",
    "metadata": {},
    "outputs": [
     {
@@ -1282,7 +1282,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "341a178d",
+   "id": "b3af67bf",
    "metadata": {},
    "outputs": [
     {
@@ -1307,7 +1307,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dbd14caa",
+   "id": "d1ff7229",
    "metadata": {},
    "source": [
     "Has a negative correlation between listing date and price, rather small"
@@ -1316,7 +1316,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "16384234",
+   "id": "f82de36d",
    "metadata": {},
    "outputs": [
     {
@@ -1341,7 +1341,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "586c31f4",
+   "id": "d43d09a7",
    "metadata": {},
    "source": [
     "Looking at both head and tail, there is a good distribution of the different model names, not one that is prelevant wherease the rest only has 1 or 2 entries -> group and turn into numeric"
@@ -1350,7 +1350,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "21b88208",
+   "id": "da54dbe0",
    "metadata": {},
    "outputs": [
     {
@@ -1432,7 +1432,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "17376e07",
+   "id": "c5fd7a2c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1468,7 +1468,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "9819c859",
+   "id": "43fa09c5",
    "metadata": {},
    "outputs": [
     {
@@ -1494,7 +1494,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "7a37173f",
+   "id": "66d99aa5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1505,7 +1505,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "5f2e9ed8",
+   "id": "c8ea003f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1515,7 +1515,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "f1dc6354",
+   "id": "8fb42724",
    "metadata": {},
    "outputs": [
     {
@@ -1540,7 +1540,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "e1c60e7a",
+   "id": "6275fb3d",
    "metadata": {},
    "outputs": [
     {
@@ -1561,7 +1561,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "47ac6982",
+   "id": "8835fb27",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1570,7 +1570,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3f864683",
+   "id": "7d53ee8a",
    "metadata": {},
    "source": [
     "### Feature Selection "
@@ -1579,7 +1579,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "13fc8694",
+   "id": "624ac1b7",
    "metadata": {},
    "outputs": [
     {
@@ -1745,7 +1745,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "390cf1cb",
+   "id": "23eba3f0",
    "metadata": {},
    "outputs": [
     {
@@ -1771,7 +1771,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d150bb4",
+   "id": "a3780ef3",
    "metadata": {},
    "source": [
     "We have 20 predictors which have a reasonable correlation with price which we will be the only predictors we use in our model building. \n",
@@ -1782,7 +1782,7 @@
   {
    "cell_type": "code",
    "execution_count": 111,
-   "id": "96fe2613",
+   "id": "3db52dfb",
    "metadata": {},
    "outputs": [
     {
@@ -1806,7 +1806,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "797e2477",
+   "id": "023a3432",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1817,7 +1817,7 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "id": "404bf546",
+   "id": "c87cfbb1",
    "metadata": {},
    "outputs": [
     {
@@ -1857,7 +1857,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e47703bf",
+   "id": "38808519",
    "metadata": {},
    "source": [
     "The original dataset had '--' for this one observation. When we performed the data cleaning and prep, these observations were not considered missing but became missing after our feature engineering. We can drop this observation since it is only one row with data missing from the original source. "
@@ -1866,7 +1866,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "26c3583c",
+   "id": "4060756c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1874,6 +1874,17 @@
     "X.iloc[29]\n",
     "X.drop(29, inplace = True)\n",
     "y.drop(29, inplace = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "id": "05a2db01",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X.to_csv('X.csv')\n",
+    "y.to_csv('y.csv')"
    ]
   },
   {
@@ -1896,7 +1907,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "994f6666",
+   "id": "1bbb5af4",
    "metadata": {},
    "source": [
     "# ALWAYS USE RANDOM_STATE = 4"
@@ -1905,7 +1916,7 @@
   {
    "cell_type": "code",
    "execution_count": 115,
-   "id": "d9ea7939",
+   "id": "91a684e1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1924,7 +1935,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d7e3d627",
+   "id": "fb5b4210",
    "metadata": {},
    "source": [
     "### MARS & Bagging MARS \n",
@@ -1933,7 +1944,160 @@
   },
   {
    "cell_type": "markdown",
-   "id": "084dbb06",
+   "id": "d9b922db",
+   "metadata": {},
+   "source": [
+    "#### Base Mars Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "id": "07ae47c6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5150.7539906467255"
+      ]
+     },
+     "execution_count": 116,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "base_mars = Earth().fit(X_train, y_train)\n",
+    "mean_squared_error(y_test, base_mars.predict(X_test), squared = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "id": "02b9ae36",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Earth Model\n",
+      "--------------------------------------------------\n",
+      "Basis Function               Pruned  Coefficient  \n",
+      "--------------------------------------------------\n",
+      "(Intercept)                  No      64772.8      \n",
+      "h(model_name-5)              No      105007       \n",
+      "h(5-model_name)              No      -4200.46     \n",
+      "h(mileage-26175)             No      -0.0684419   \n",
+      "h(26175-mileage)             No      0.195178     \n",
+      "h(torque-560)                No      -118.635     \n",
+      "h(560-torque)                No      -25.3115     \n",
+      "h(trimId-89792)              No      -1.1421      \n",
+      "h(89792-trimId)              No      -0.185033    \n",
+      "h(savings_amount-2679)       No      3.23426      \n",
+      "h(2679-savings_amount)       Yes     None         \n",
+      "h(engine_displacement-6400)  No      488.495      \n",
+      "h(6400-engine_displacement)  No      1.24199      \n",
+      "wheelbase                    No      -251.999     \n",
+      "h(franchise_make-5)          No      -21251.7     \n",
+      "h(5-franchise_make)          No      -535.296     \n",
+      "wheel_system_cat             No      -747.284     \n",
+      "h(power-577)                 No      287.197      \n",
+      "h(577-power)                 No      -8.38422     \n",
+      "engine_cylinders_I4          No      -2900.91     \n",
+      "engine_cylinders_V8          No      4693.34      \n",
+      "length                       No      91.1224      \n",
+      "--------------------------------------------------\n",
+      "MSE: 23455124.3136, GCV: 24035576.1446, RSQ: 0.8660, GRSQ: 0.8627\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(base_mars.summary())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f716359b",
+   "metadata": {},
+   "source": [
+    "#### Coarse Gridsearch MARS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "id": "48bdd539",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 5 folds for each of 18 candidates, totalling 90 fits\n",
+      "Best MARS params:  {'enable_pruning': True, 'max_degree': 4}\n",
+      "Tuned mars model RMSE: 4796.447498691177\n",
+      "Earth Model\n",
+      "--------------------------------------------------------------------------\n",
+      "Basis Function                                      Pruned  Coefficient   \n",
+      "--------------------------------------------------------------------------\n",
+      "(Intercept)                                         No      88555.5       \n",
+      "h(model_name-5)                                     No      37859.6       \n",
+      "h(5-model_name)                                     No      -10191.6      \n",
+      "h(mileage-26175)                                    No      -0.329177     \n",
+      "h(26175-mileage)                                    No      1.19366       \n",
+      "h(model_name-5)*h(mileage-26175)                    No      -4.65058      \n",
+      "h(5-model_name)*h(mileage-26175)                    No      0.00827854    \n",
+      "h(torque-560)                                       No      105.497       \n",
+      "h(560-torque)                                       No      -39.0122      \n",
+      "h(trimId-75453)                                     No      0.14989       \n",
+      "h(75453-trimId)                                     No      -0.28416      \n",
+      "wheel_system_cat*h(model_name-5)                    No      23625         \n",
+      "h(mileage-26410)*h(560-torque)                      No      0.000289727   \n",
+      "h(26410-mileage)*h(560-torque)                      No      -0.00222053   \n",
+      "model_name*h(5-model_name)                          No      668.129       \n",
+      "wheelbase                                           No      -8849.04      \n",
+      "engine_cylinders_I4                                 No      -2273.28      \n",
+      "wheel_system_cat*model_name*h(5-model_name)         No      -209.956      \n",
+      "h(savings_amount-1334)                              No      1.78673       \n",
+      "h(1334-savings_amount)                              Yes     None          \n",
+      "torque*model_name*h(5-model_name)                   No      -2.84237      \n",
+      "engine_cylinders_V8*wheelbase                       No      66.4822       \n",
+      "h(trimId-82130)*h(5-model_name)                     Yes     None          \n",
+      "h(82130-trimId)*h(5-model_name)                     No      0.0465898     \n",
+      "length*h(5-model_name)                              No      25.005        \n",
+      "h(mileage-28245)*torque*model_name*h(5-model_name)  Yes     None          \n",
+      "h(28245-mileage)*torque*model_name*h(5-model_name)  No      -0.000156181  \n",
+      "h(franchise_make-5)                                 No      36175.2       \n",
+      "h(5-franchise_make)                                 No      -258.474      \n",
+      "h(franchise_make-5)*h(savings_amount-1334)          No      -10.0584      \n",
+      "h(5-franchise_make)*h(savings_amount-1334)          No      -0.247461     \n",
+      "engine_cylinders_V8*h(560-torque)                   No      -38.2406      \n",
+      "h(mileage-147589)*wheelbase                         No      0.00184296    \n",
+      "h(147589-mileage)*wheelbase                         No      -0.00116415   \n",
+      "year*wheelbase                                      No      4.32965       \n",
+      "--------------------------------------------------------------------------\n",
+      "MSE: 16283815.1227, GCV: 16910327.4418, RSQ: 0.9069, GRSQ: 0.9034\n"
+     ]
+    }
+   ],
+   "source": [
+    "mars_params = {'max_degree': range(1, 10),\n",
+    "              'enable_pruning': [True, False]}\n",
+    "\n",
+    "mars_grid = GridSearchCV(Earth(), mars_params, \n",
+    "                         scoring = 'neg_mean_absolute_error', n_jobs = -1, cv = 5, verbose = 1)\n",
+    "mars_grid.fit(X_train, y_train)\n",
+    "\n",
+    "print(\"Best MARS params: \", mars_grid.best_params_)\n",
+    "print(\"Tuned mars model RMSE:\", mean_squared_error(y_test, mars_grid.predict(X_test), squared = False))\n",
+    "print(mars_grid.best_estimator_.summary())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aa3f63c4",
    "metadata": {},
    "source": [
     "### Decision Trees & Bagging Decision Trees\n",
@@ -1942,7 +2106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2570a58a",
+   "id": "b3423d1a",
    "metadata": {},
    "source": [
     "### Random forest \n",
