problem, cb section

--- a/Project Report Template (2).ipynb
+++ b/Project Report Template (2).ipynb
@@ -64,12 +64,28 @@
   },
   {
    "cell_type": "markdown",
+   "id": "709ad4e3-e899-4390-b785-873f300a2194",
+   "metadata": {},
+   "source": [
+    "Since buying a used car requires a level of trust between buyers and sellers, it's difficult to know what a good price is. We want to make a tool that buyers and sellers can use to facilitate the exchange."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "84ff1421",
    "metadata": {},
    "source": [
     "## Problem statement \n",
     "\n",
     "Describe your problem statement. Articulate your objectives using absolutely no jargon. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c542e604-80b9-466d-8111-0d3339cfdf04",
+   "metadata": {},
+   "source": [
+    "The car industry is vast, and venturing into buying or selling a car can often be challenging, especially as the used car market is even harder to keep track off. Therefore, we want to create a model that can give potential buyers and sellers on overview of what to expect in price range."
    ]
   },
   {
@@ -83,11 +99,27 @@
   },
   {
    "cell_type": "markdown",
+   "id": "cf5f27f0-490a-4f24-b5b5-0708e750fb43",
+   "metadata": {},
+   "source": [
+    "The data we will use is from Kaggle https://www.kaggle.com/datasets/ananaymital/us-used-cars-dataset. The original dataset has 3 million observations but we randomly sampled 6000 observations to used as our test and train data. This will help solve the problem because as it containts the price as well as ~50 other charactersitics describing cars that were sold used. From this data, we can build a model predicting car price to help potential sellers adjust heir expectations and potential buyers to get a reasonable price range for the car they are expecting to buy."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "8c255035",
    "metadata": {},
    "source": [
     "## Stakeholders\n",
     "Who cares? If you are successful, what difference will it make to them?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cb25cab9-d44b-4d7a-a8ae-3df50f23b0e4",
+   "metadata": {},
+   "source": [
+    "Our stakeholders are used car buyers, seller, and third-parties that enable these exchanges. This will help sellers and buyers make informed decisions about what a reasonable price for the car is."
    ]
   },
   {
@@ -201,6 +233,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7f66d9c0-b8c3-4c95-993e-24ad4f5e6d9a",
+   "metadata": {},
+   "source": [
+    "# Write your section for the model you did here!!!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "ea422beb",
    "metadata": {},
    "source": [
@@ -213,8 +253,12 @@
    "id": "b78fbd0e",
    "metadata": {},
    "source": [
-    "### AdaBoost & LightGBM\n",
-    "*By Sankaranarayanan Balasubramanian*"
+    "### CatBoost\n",
+    "*By Yuyan Zhang*\n",
+    "\n",
+    "I used the cleaned data above and found the base CatBoost had very good performance with a train RMSE of 1199 and test RMSE of 2056. I thought it might be overfitting, so I used GridSearch to see if it could be better tuned. However, with the grid I set, the test RMSE all hovered around 2000 and 2500, while train RMSE was between 1000 and 1500 or overfitting even more with train RMSE under 1000. Therefore, I decided to use the base model as the final model.\n",
+    "\n",
+    "Before making the CatBoost model, I also made AdaBoost and GradBoost models, but since performance was subpar to CatBoost, I decided not to attempt tuning them and focus on CatBoost instead."
    ]
   },
   {
@@ -490,7 +534,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
